[tool.poetry]
name = "minechat"
version = "0.1.0"
description = "project for educational purposes"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.4.0"
async-timeout = "^3.0"
aionursery = "^0.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.740.0"

[tool.poetry.scripts]
minechat = "minechat.main:main"
registration = "minechat.registration:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
